[gd_scene load_steps=7 format=3 uid="uid://cphwtf8sbqbit"]

[ext_resource type="PackedScene" uid="uid://c5k3aj7yblg0f" path="res://demo/test-scenes/test-scene-basic/TestSceneBasic.tscn" id="1"]
[ext_resource type="PackedScene" path="res://demo/src/FractureShard.tscn" id="2"]
[ext_resource type="PackedScene" path="res://demo/src/CutShapeVisualizer.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dhrqqo38wiuqi" path="res://pool-manager/Pool2DBasic.tscn" id="4"]
[ext_resource type="Script" path="res://demo/src/BlobFracture.gd" id="5"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.0
bounce = 1.0

[node name="CutSceneBasic" instance=ExtResource("1")]

[node name="BlobFracture" type="Node2D" parent="." index="0"]
script = ExtResource("5")

[node name="BlobParent" type="Node2D" parent="BlobFracture" index="0"]

[node name="Edge" type="StaticBody2D" parent="BlobFracture" index="1"]
modulate = Color(0.537255, 0.266667, 0.266667, 1)
position = Vector2(0, 933.82)
physics_material_override = SubResource("1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BlobFracture/Edge" index="0"]
polygon = PackedVector2Array(-1888.94, -360.544, -1652.27, -611.544, -1891.09, -1005.08, -1888, -1893.82, 1888, -1893.82, 1903.04, -70.0054, 1492.68, 114.992, 320, -325.82, -256, -325.82, -1719.55, 114.992, -1888, -69.82, -1888.94, -357.922, -2024.51, -319.195, -2069.36, 219.263, 2037.58, 313.443, 2081.48, -2057.26, -1996.06, -2091.24, -2025.33, -322.011)

[node name="Polygon2D" type="Polygon2D" parent="BlobFracture/Edge" index="1"]
color = Color(0.603922, 0.603922, 0.603922, 1)
polygon = PackedVector2Array(-1888, -69.82, -1715.91, 115.684, -256, -325.82, 320, -325.82, 1489.84, 111.195, 1902.91, -72.8892, 1888, -1893.82, -1888, -1893.82, -1891.02, -1006.78, -1644.07, -611.671, -2025.71, -225.544, -1998.77, -2097.81, 2082.5, -2052.91, 2037.6, 322.217, -2066.12, 223.441, -2084.08, -369.219, -1888, -453.82)

[node name="Line2D" type="Line2D" parent="BlobFracture/Edge/Polygon2D" index="0"]
points = PackedVector2Array(-1649.77, -613.744, -1891.67, -1001.8, -1888, -1893.82, 1888, -1893.82, 1900.69, -74.4978, 1495, 109.451, 320, -325.82, -256, -325.82, -1717.37, 115.107, -1888, -69.82, -1888, -357.82, -1649.31, -613.507)
width = 15.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Pool_CutVisualizer" parent="BlobFracture" index="2" instance=ExtResource("4")]
placed_in_level = true
instance_template = ExtResource("3")
max_amount = 30
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="Pool_FractureShards" parent="BlobFracture" index="3" instance=ExtResource("4")]
placed_in_level = true
instance_template = ExtResource("2")
max_amount = 250
keep_instances_in_tree = true

[node name="Camera2D" parent="." index="1"]
zoom = Vector2(0.5, 0.5)

[node name="Title" parent="CanvasLayer" index="0"]
text = "POLYGON RESTORING"

[node name="InfoLabel" parent="CanvasLayer" index="1"]
text = "CHANGE TEST [W]
RALLY POINT [LMB]
CLEAR [RMB]
FULLSCREEN [F]
QUIT [ESC]"
